[UNTESTED] Code cleanup